--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "tir",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "@nuxtjs/axios": "^5.13.1",
-    "core-js": "^3.9.1",
-    "gsap": "^3.6.1",
-    "node-sass": "^5.0.0",
-    "nuxt": "^2.15.3",
-    "sass-loader": "^10.1.1"
-  },
-  "devDependencies": {
-    "nuxt-gsap-module": "^1.2.1"
-  }
+    "name": "tir",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "heroku-postbuild": "npm run build"
+    },
+    "dependencies": {
+        "@nuxtjs/axios": "^5.13.1",
+        "core-js": "^3.9.1",
+        "gsap": "^3.6.1",
+        "node-sass": "^5.0.0",
+        "nuxt": "^2.15.3",
+        "sass-loader": "^10.1.1"
+    },
+    "devDependencies": {
+        "nuxt-gsap-module": "^1.2.1"
+    }
 }
