--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     },
     "devDependencies": {
         "nuxt-gsap-module": "^1.2.1"
+    },
+    "engines": {
+        "node": "15.x",
+        "npm": "7.x"
     }
 }
